# Paste-for-Windows

./: ARCHITECTURE.md  AUTO_TYPE_GUIDE.md  CARD_APPLICATION_SUMMARY.md  CARD_IMPROVEMENTS.md  CHANGELOG.md  CLIPBOARD_FIX.md  COMPARISON.md  FEATURES.md  FINAL_GUIDE.md  HOTKEY_GUIDE.md  ICON_GUIDE.md  INSTALL.md  LICENSE  PYQT6_COMPATIBILITY.md  QUICK_START.md  README.md  ROADMAP.md  SCROLLBAR_TEST_DATA.md  STAGE1_COMPLETE.md  TEST_CARDS_SUMMARY.md  UI_DESIGN.md  USAGE_SUMMARY.md  WHEEL_SCROLL_FEATURE.md  WHEEL_SCROLL_OPTIMIZATION.md  clipboard_manager.py  config.py  database.py  debug_border.py  demo_bottom_panel.py  demo_hotkey.py  gui.py  install.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  run.bat  run.py  simple_app.py  simple_test.py  (+34 more)
scripts/: create_icons.py  create_simple_icon.py
src/: __init__.py  main.py
src/core/: __init__.py  clipboard_manager.py  config_manager.py
src/data/: __init__.py  database.py
src/gui/: __init__.py  bottom_panel.py  card_generator.py  system_tray.py
src/utils/: auto_type.py  hotkey_manager.py
